# SRE_Agent

./: .Backend  .env  .env.example  .replit  DATABASE_INTEGRATION.md  MONITORING_STATUS.md  README.md  SETUP_GUIDE.md  SLACK_EVENTS_SETUP.md  SLACK_SETUP_GUIDE.md  STORAGE_METRICS_ARCHITECTURE.md  alerts.db  app.py  generate_test_alerts.py  jira_client.py  package-lock.json  package.json  pyproject.toml  run.py  slack_events.py  slack_integration.py  slack_integration_enterprise.py  slack_oauth_helper.py  test_database.py  test_jira_fix.py  test_monitoring.py
alertmanager/: alertmanager.yml
attached_assets/: HighLevelDesign-requirements  Pasted-Here-s-the-requirements-document-in-a-professional-format-suitable-for-inclusion-in-a-system-design--1750129371912_1750129371913.txt
config/: thresholds.yml
database/: alert_store.py  sqlite_store.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AlertsList.css  AlertsList.js  Dashboard.css  Dashboard.js  DatabaseView.css  DatabaseView.js  SystemMetrics.css  SystemMetrics.js  UnifiedDashboard.css  UnifiedDashboard.js
frontend/src/hooks/: useWebSocket.js
monitoring/: dashboard.py  disk_monitor.py  enhanced_dashboard.py  enterprise_storage_dashboard.py  mobile_responsive.css  premium_dashboard.py  storage_alert_generator.py  storage_metrics.py  system_monitor.py
prometheus/: alert_rules.yml  prometheus.yml
scripts/: setup.sh  smart_check.sh  start_services.sh
webhook_server/: __init__.py  app.py  jira_client.py
(+1 files in other folders)
