[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "motor>=3.7.1",
    "psutil>=7.0.0",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
